--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Betsy Katsaras</h1>
+        <h1 class='masthead-heading'>Betsy</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Web Designer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Peru</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Yoga, rock climbing, running, watching movies, go out with friends, travel, read and sometimes cook.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Web Developer that travels</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Miami</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be able to create better websites, web apps, and make more money.</p>
     </section>
 
     <footer id="footer">
